--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
+    <!-- Custom Css -->
+    <link href="css/custom.css" rel="stylesheet">
+
       <!-- Custom Fonts-->
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,700' rel='stylesheet' type='text/css'>
       
@@ -27,45 +30,43 @@
   <body>
     <!-- HEADER -->
     <header>
-      <nav class="navbar navbar-default navbar-fixed-top">
+       <nav class="navbar navbar-default">
         <div class="container">
           <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-              <span class="sr-only">Toggle navigation</span>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle Navigation</span>
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
-              <span class="icon-bar"></span>   
+              <span class="icon-bar"></span>
             </button>
-             <a class="navbar-brand" href="#">La Tienda</a>
-          </div>
-          <div id="navbar" class="navbar-collapse collapse">
-        <!--     <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li role="separator" class="divider"></li>
-                  <li class="dropdown-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>
-            </ul> -->
-            <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a href="../navbar/">Home  <span class="sr-only">(current)</span> </a></li>
-              <li><a href="../navbar-static-top/">About</a></li>
-              <li><a href="../navbar-static-top/">Blog</a></li>
-              <li><a href="./">Contact</a></li>
-            </ul>
-          </div> <!--/.nav-collapse -->
-        </div>
-      </nav>
+            <a href="index.html" class="navbar-brand">La Tienda</a>
+          </div> <!-- /navbar-header -->
 
+          <div id="nav-container" class="pull-right">
+            <div class="collapse navbar-collapse">
+              <ul class="nav navbar-nav navbar-left with-social">
+                <li class="active"><a href="index.html">Home</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="">Latest News</a></li>
+              </ul>
+
+              <div id="menu-social" class="menu navbar-right">
+                <ul id="menu-social-items">
+                  <li class="menu-item">
+                  <a href=""><i class="fa fa-facebook fa-lg"></i></a>
+                  </li>
+                  <li class="menu-item">
+                  <a href=""><i class="fa fa-instagram fa-lg"></i></a>
+                  </li>
+                  <li class="menu-item">
+                  <a href=""><i class="fa fa-pinterest fa-lg"></i></a>
+                  </li>
+                </ul>
+              </div>
+            </div> <!-- /navbar-collapse -->
+          </div> 
+        </div> <!-- /container fluid -->
+      </nav>
 
     </header>
 
