--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               </div>
             </div> <!-- /navbar-collapse -->
           </div> 
-        </div> <!-- /container fluid -->
+        </div> <!-- /container -->
       </nav>
 
     </header>
